--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.62.11",
-    "axios": "^1.7.9",
+    "@tanstack/react-query": "^5.90.10",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.9.6",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
